SERVER-26230 DocumentSourceCursor should reset keysExamined and docsExamined between batches